# dns-updater

./: .gitignore  Cargo.toml  README.md
configs/: config.json.example
docker/: Dockerfile
scripts/linux/: restart-rebuild-app.sh  view-fs.sh
scripts/windows/: restart-rebuild-app.ps1
src/: main.rs
src/services/: cloudflare_service.rs  ip_resolver_service.rs  mod.rs
