[package]
name = "dns-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
reqwest = { version = "0.12.5", features = ["json"] }
log = "0.4.22"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
env_logger = "0.11.5"
apalis-cron = "0.5.3"
